--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+encoding//hibernateLearning/Main.java=UTF-8
+encoding//springLearning/springidol/Juggler.java=UTF-8
+encoding//springLearning/springidol/PoeticJuggler.java=UTF-8
+encoding//springLearning/springidol/Sonnet29.java=UTF-8
+encoding//springLearning/springidol2/Juggler.java=UTF-8
 encoding//src/main/java/FrameElections.java=UTF-8
 encoding//src/main/java/ListenerLogin.java=UTF-8
 encoding//src/main/java/ListenerSelection.java=UTF-8
